<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_grey"
    android:orientation="vertical"
    tools:context=".WelcomPage">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:background="@drawable/the_cheezery"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/dusty_white"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_text"
        android:textAlignment="center"

        />


    <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:textColor="@color/dusty_white"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:padding="15dp"
        />

    <Button
        android:id="@+id/button_getStarted"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:text="@string/button_start"
        android:background="@drawable/round_button"
        android:layout_gravity="center_horizontal"


        />


</LinearLayout>